# autoLogonTM

./: .gitignore  CMakeLists.txt  README.md
LogonUI/: AutoLogonTM.sln
LogonUI/AutoLogonTM/: AutoLogonTM.csproj  Form1.Designer.cs  Form1.cs  Form1.resx  Program.cs
LogonUI/AutoLogonTM/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
libLogonTM/: CMakeLists.txt  ControlsFinder.h  QQAccountBuilder.h  base32.h  logon.def  logonMain.cpp  logonTM.h
src/: CMakeLists.txt  ControlsFinder.h  logonMain.cpp
